# CompoSET

./: .gitignore  CITATION.bib  LICENSE  README.md  pyproject.toml  taxonomy.md
data_generation/: PIPELINE.md  scene_settings.csv
data_generation/prompts/: caption_1_generate_base.txt  caption_2_edit_from_image.txt  caption_3_generate_variations.txt  caption_4_verify_variations.txt  caption_7_build_densities.txt  caption_7_build_verbosities.txt  caption_7b_reprune_long.txt  image_1_generate_base.txt  image_2_apply_variation.txt
data_generation/scripts/: build_densities.py  build_verbosities.py  common.py  finalize.py  generate_base.py  generate_variations.py
eval/: __init__.py  analyze.py  benchmark.py  make_tables.py  models.py  run.py  run_all_benchmarks.py  summary.py
eval/loaders/: __init__.py  bivlc.py  colorbench.py  colorswap.py  composet.py  mmvp.py  naturalbench.py  sugarcrepe.py  sugarcrepe_pp.py  whatsup.py  winoground.py
qc_app/: server.py
qc_app/static/: app.js  style.css
qc_app/templates/: index.html
