[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composet"
version = "1.0.0"
description = "CompoSET: Compositional Single-Edit Testbed for Vision-Language Models"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Anonymous Authors"}]
keywords = [
    "vision-language",
    "compositionality",
    "benchmark",
    "evaluation",
    "vlm",
    "winoground",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchvision",
    "transformers>=4.40",
    "open-clip-torch>=2.24",
    "datasets>=2.18",
    "huggingface-hub>=0.20",
    "pillow",
    "numpy",
    "pandas",
    "pyarrow",
    "tqdm",
]

[project.optional-dependencies]
generation = [
    "anthropic>=0.30",
    "google-genai",
]
qc = [
    "flask>=3.0",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["eval*", "data_generation*", "qc_app*"]
